--- a/website/index.html
+++ b/website/index.html
@@ -43,70 +43,66 @@
       border-bottom: 1px solid #ccc;
     }
 
-    /* Reverted menu icon (old style) */
     .menu-btn {
-      width: 20px;
-      height: 14px;
+      width: 10px;
+      height: 2px;
+      background-color: black;
       position: relative;
       cursor: pointer;
       transition: all 0.3s ease-in-out;
-      margin-top: 0;
+      margin-top: 2px;
     }
 
-    .menu-btn span {
-      position: absolute;
+    .menu-btn::before,
+    .menu-btn::after {
+      content: "";
+      width: 10px;
       height: 2px;
-      width: 100%;
       background-color: black;
-      left: 0;
+      position: absolute;
       transition: all 0.3s ease-in-out;
     }
 
-    .menu-btn span:nth-child(1) {
+    .menu-btn::before {
+      top: -6px;
+    }
+
+    .menu-btn::after {
+      top: 6px;
+    }
+
+    .menu-btn.open {
+      background-color: transparent;
+    }
+
+    .menu-btn.open::before {
+      transform: rotate(45deg);
       top: 0;
     }
-    .menu-btn span:nth-child(2) {
-      top: 6px;
-    }
-    .menu-btn span:nth-child(3) {
-      top: 12px;
-    }
 
-    /* Toggle to X */
-    .menu-btn.open span:nth-child(1) {
-      transform: rotate(45deg);
-      top: 6px;
-    }
-
-    .menu-btn.open span:nth-child(2) {
-      opacity: 0;
-    }
-
-    .menu-btn.open span:nth-child(3) {
+    .menu-btn.open::after {
       transform: rotate(-45deg);
-      top: 6px;
+      top: 0;
     }
 
-    /* Logo container moved lower and smaller logo */
     .logo-container {
       position: absolute;
       left: 50%;
       transform: translateX(-50%);
-      top: 12px; /* lowered a bit */
+      top: 6px;
       cursor: pointer;
       z-index: 1300;
     }
 
     .logo {
-      height: 28px; /* smaller */
-      display: block;
+      height: 44px; /* bigger logo */
     }
 
     .cart-icon-container {
       position: relative;
       cursor: pointer;
       z-index: 1300;
-      margin-top: 3px;
+      margin-top: 0; /* moved higher */
       margin-right: 2px;
     }
 
@@ -157,40 +153,33 @@
       z-index: 1;
     }
 
-    /* Side arrows */
+    /* Arrows styles */
     .arrow {
       position: absolute;
       top: 50%;
       transform: translateY(-50%);
-      background: rgba(255, 255, 255, 0.7);
-      border-radius: 50%;
-      width: 36px;
-      height: 36px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      color: white;
+      font-size: 36px; /* bigger */
+      font-weight: bold;
       cursor: pointer;
       user-select: none;
+      background: none; /* removed white circle */
+      border: none;
+      padding: 0 10px;
       z-index: 1500;
-      transition: background 0.3s ease;
+      transition: color 0.3s ease;
     }
 
     .arrow:hover {
-      background: rgba(255, 255, 255, 1);
+      color: #ddd;
     }
 
-    .arrow.left {
-      left: 16px;
+    .arrow-left {
+      left: 10px; /* closer to edge */
     }
 
-    .arrow.right {
-      right: 16px;
-    }
-
-    .arrow svg {
-      width: 20px;
-      height: 20px;
-      fill: black;
+    .arrow-right {
+      right: 10px; /* closer to edge */
     }
 
     .sidebar {
@@ -231,11 +220,7 @@
 <body>
 
   <header>
-    <div id="menuToggle" class="menu-btn" aria-label="Toggle sidebar" role="button" tabindex="0">
-      <span></span>
-      <span></span>
-      <span></span>
-    </div>
+    <div id="menuToggle" class="menu-btn" aria-label="Toggle sidebar" role="button" tabindex="0"></div>
 
     <div class="logo-container" id="logoContainer" title="Go to main page" role="button" tabindex="0">
       <img src="https://github.com/mattscianna/mattscianna/blob/main/MATTSCIANNA.png?raw=true" alt="Matt Scianna Logo" class="logo" />
@@ -248,16 +233,12 @@
   </header>
 
   <div class="image-box" aria-label="Image slideshow">
-    <img class="slide-img active" src="https://via.placeholder.com/1200x700?text=Image+1" alt="Slide 1" />
-    <img class="slide-img" src="https://via.placeholder.com/1200x700?text=Image+2" alt="Slide 2" />
-
-    <!-- Side arrows -->
-    <div class="arrow left" id="prevArrow" aria-label="Previous image" role="button" tabindex="0">
-      <svg viewBox="0 0 24 24"><path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/></svg>
-    </div>
-    <div class="arrow right" id="nextArrow" aria-label="Next image" role="button" tabindex="0">
-      <svg viewBox="0 0 24 24"><path d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6z"/></svg>
-    </div>
+    <img class="slide-img active" src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=1200&q=80" alt="Football turf 1" />
+    <img class="slide-img" src="https://images.unsplash.com/photo-1549924231-f129b911e442?auto=format&fit=crop&w=1200&q=80" alt="Football turf 2" />
+    
+    <!-- Arrows -->
+    <button class="arrow arrow-left" aria-label="Previous slide" tabindex="0">&lt;</button>
+    <button class="arrow arrow-right" aria-label="Next slide" tabindex="0">&gt;</button>
   </div>
 
   <nav id="sidebar" class="sidebar" aria-hidden="true" role="navigation" aria-label="Sidebar navigation">
@@ -269,6 +250,10 @@
     const sidebar = document.getElementById('sidebar');
     const logoContainer = document.getElementById('logoContainer');
     const cartCountEl = document.getElementById('cartCount');
+    const slides = document.querySelectorAll('.slide-img');
+    const prevBtn = document.querySelector('.arrow-left');
+    const nextBtn = document.querySelector('.arrow-right');
+    let currentSlide = 0;
 
     menuToggle.addEventListener('click', () => {
       const isOpen = sidebar.classList.toggle('open');
@@ -300,42 +285,21 @@
       });
     });
 
-    // Image slideshow logic with arrows and auto change every 10 seconds
-    const slides = document.querySelectorAll('.slide-img');
-    let currentIndex = 0;
-    let slideInterval = setInterval(nextSlide, 10000); // 10 seconds
-
     function showSlide(index) {
       slides.forEach((slide, i) => {
         slide.classList.toggle('active', i === index);
       });
-      currentIndex = index;
     }
 
-    function nextSlide() {
-      let nextIndex = (currentIndex + 1) % slides.length;
-      showSlide(nextIndex);
-    }
-
-    function prevSlide() {
-      let prevIndex = (currentIndex - 1 + slides.length) % slides.length;
-      showSlide(prevIndex);
-    }
-
-    document.getElementById('nextArrow').addEventListener('click', () => {
-      nextSlide();
-      resetInterval();
+    prevBtn.addEventListener('click', () => {
+      currentSlide = (currentSlide - 1 + slides.length) % slides.length;
+      showSlide(currentSlide);
     });
 
-    document.getElementById('prevArrow').addEventListener('click', () => {
-      prevSlide();
-      resetInterval();
+    nextBtn.addEventListener('click', () => {
+      currentSlide = (currentSlide + 1) % slides.length;
+      showSlide(currentSlide);
     });
-
-    function resetInterval() {
-      clearInterval(slideInterval);
-      slideInterval = setInterval(nextSlide, 10000);
-    }
   </script>
 </body>
 </html>
