--- a/website/index.html
+++ b/website/index.html
@@ -39,13 +39,12 @@
       background-color: white;
       color: black;
       z-index: 1200;
-      box-sizing: border-box;
       border-bottom: 1px solid #ccc;
     }
 
     .menu-icon {
-      width: 24px;
-      height: 18px;
+      width: 20px;
+      height: 16px;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
@@ -57,6 +56,7 @@
       height: 2px;
       background-color: black;
       transition: all 0.3s ease;
+      border-radius: 1px;
     }
 
     .menu-icon.open div:nth-child(1) {
@@ -75,7 +75,7 @@
       position: absolute;
       left: 50%;
       transform: translateX(-50%);
-      top: 70%; /* lowered slightly */
+      top: 50%;
       transform: translate(-50%, -50%);
       z-index: 1300;
     }
