--- a/website/index.html
+++ b/website/index.html
@@ -43,24 +43,38 @@
     }
 
     .menu-icon {
-      width: 20px;
-      height: 16px;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
+      width: 24px;
+      height: 24px;
+      position: relative;
       cursor: pointer;
-      transition: transform 0.3s ease;
+      z-index: 1300;
     }
 
     .menu-icon div {
+      position: absolute;
+      width: 100%;
       height: 2px;
       background-color: black;
+      left: 0;
       transition: all 0.3s ease;
-      border-radius: 1px;
+      border-radius: 2px;
+    }
+
+    .menu-icon div:nth-child(1) {
+      top: 6px;
+    }
+
+    .menu-icon div:nth-child(2) {
+      top: 12px;
+    }
+
+    .menu-icon div:nth-child(3) {
+      top: 18px;
     }
 
     .menu-icon.open div:nth-child(1) {
-      transform: rotate(45deg) translate(4px, 4px);
+      transform: rotate(45deg);
+      top: 12px;
     }
 
     .menu-icon.open div:nth-child(2) {
@@ -68,14 +82,15 @@
     }
 
     .menu-icon.open div:nth-child(3) {
-      transform: rotate(-45deg) translate(4px, -4px);
+      transform: rotate(-45deg);
+      top: 12px;
     }
 
     .logo-container {
       position: absolute;
       left: 50%;
       transform: translateX(-50%);
-      top: 50%;
+      top: 55%;
       transform: translate(-50%, -50%);
       z-index: 1300;
     }
@@ -122,7 +137,7 @@
     .slide-img {
       position: absolute;
       width: 100%;
-      height: 400px;
+      height: 100%;
       object-fit: cover;
       opacity: 0;
       transition: opacity 1s ease-in-out;
@@ -231,6 +246,7 @@
     const prevBtn = document.querySelector('.arrow-left');
     const nextBtn = document.querySelector('.arrow-right');
     let currentSlide = 0;
+    let slideInterval;
 
     menuToggle.addEventListener('click', () => {
       const isOpen = sidebar.classList.toggle('open');
@@ -264,15 +280,29 @@
       });
     }
 
+    function autoSlide() {
+      slideInterval = setInterval(() => {
+        currentSlide = (currentSlide + 1) % slides.length;
+        showSlide(currentSlide);
+      }, 10000);
+    }
+
     prevBtn.addEventListener('click', () => {
+      clearInterval(slideInterval);
       currentSlide = (currentSlide - 1 + slides.length) % slides.length;
       showSlide(currentSlide);
+      autoSlide();
     });
 
     nextBtn.addEventListener('click', () => {
+      clearInterval(slideInterval);
       currentSlide = (currentSlide + 1) % slides.length;
       showSlide(currentSlide);
+      autoSlide();
     });
+
+    // Start automatic slideshow
+    autoSlide();
   </script>
 </body>
 </html>
