--- a/website/index.html
+++ b/website/index.html
@@ -4,9 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Matt Scianna</title>
-
   <link href="https://fonts.googleapis.com/css2?family=Cardo&display=swap" rel="stylesheet" />
-
   <style>
     * {
       margin: 0;
@@ -35,7 +33,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 0 16px;
+      padding: 12px 16px;
       background-color: white;
       color: black;
       z-index: 1200;
@@ -43,17 +41,20 @@
     }
 
     .menu-icon {
-      width: 24px;
-      height: 24px;
+      width: 16px;
+      height: 14px;
       position: relative;
       cursor: pointer;
-      z-index: 1300;
+      transition: all 0.3s ease;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
 
     .menu-icon div {
       position: absolute;
-      width: 100%;
-      height: 2px;
+      width: 16px; /* Adjusted width */
+      height: 2px; /* Height stays same */
       background-color: black;
       left: 0;
       transition: all 0.3s ease;
@@ -61,20 +62,20 @@
     }
 
     .menu-icon div:nth-child(1) {
-      top: 6px;
+      top: 0;
     }
 
     .menu-icon div:nth-child(2) {
-      top: 12px;
+      top: 6px;
     }
 
     .menu-icon div:nth-child(3) {
-      top: 18px;
+      top: 12px;
     }
 
     .menu-icon.open div:nth-child(1) {
       transform: rotate(45deg);
-      top: 12px;
+      top: 6px;
     }
 
     .menu-icon.open div:nth-child(2) {
@@ -83,23 +84,24 @@
 
     .menu-icon.open div:nth-child(3) {
       transform: rotate(-45deg);
-      top: 12px;
+      top: 6px;
     }
 
     .logo-container {
       position: absolute;
       left: 50%;
       transform: translateX(-50%);
-      top: 55%;
+      top: 58%; /* Tiniest bit lower */
       transform: translate(-50%, -50%);
       z-index: 1300;
     }
 
     .logo {
-      height: 32px;
+      height: 36px;
     }
 
     .cart-icon-container {
+      position: relative;
       cursor: pointer;
       z-index: 1300;
       display: flex;
@@ -108,6 +110,7 @@
 
     .cart-icon {
       height: 20px;
+      display: block;
     }
 
     .cart-count {
@@ -137,7 +140,7 @@
     .slide-img {
       position: absolute;
       width: 100%;
-      height: 100%;
+      height: 400px;
       object-fit: cover;
       opacity: 0;
       transition: opacity 1s ease-in-out;
@@ -154,18 +157,20 @@
       position: absolute;
       top: 50%;
       transform: translateY(-50%);
-      width: 24px;
-      height: 24px;
+      font-size: 32px;
+      color: white;
+      background: none;
+      border: none;
       cursor: pointer;
-      z-index: 1500;
-      fill: white;
+      z-index: 2;
+      padding: 10px;
     }
 
-    .arrow-left {
+    .arrow.left {
       left: 10px;
     }
 
-    .arrow-right {
+    .arrow.right {
       right: 10px;
     }
 
@@ -191,6 +196,10 @@
 
     .sidebar.open {
       left: 0;
+    }
+
+    main {
+      display: none;
     }
 
     @media (min-width: 768px) {
@@ -219,18 +228,11 @@
     </div>
   </header>
 
-  <div class="image-box">
-    <img class="slide-img active" src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=1200&q=80" alt="Football turf 1" />
-    <img class="slide-img" src="https://images.unsplash.com/photo-1549924231-f129b911e442?auto=format&fit=crop&w=1200&q=80" alt="Football turf 2" />
-
-    <!-- SVG Arrows -->
-    <svg class="arrow arrow-left" viewBox="0 0 24 24">
-      <path d="M15 18l-6-6 6-6" stroke="white" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"/>
-    </svg>
-
-    <svg class="arrow arrow-right" viewBox="0 0 24 24">
-      <path d="M9 6l6 6-6 6" stroke="white" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"/>
-    </svg>
+  <div class="image-box" aria-label="Image slideshow">
+    <img class="slide-img active" src="https://images.unsplash.com/photo-1603732551608-5fbc96b2c60d?auto=format&fit=crop&w=1200&q=80" alt="Football Turf 1" />
+    <img class="slide-img" src="https://images.unsplash.com/photo-1579982413367-39cdb401e9c4?auto=format&fit=crop&w=1200&q=80" alt="Football Turf 2" />
+    <button class="arrow left" onclick="prevSlide()">&#10094;</button>
+    <button class="arrow right" onclick="nextSlide()">&#10095;</button>
   </div>
 
   <nav id="sidebar" class="sidebar" aria-hidden="true" role="navigation" aria-label="Sidebar navigation">
@@ -243,19 +245,20 @@
     const logoContainer = document.getElementById('logoContainer');
     const cartCountEl = document.getElementById('cartCount');
     const slides = document.querySelectorAll('.slide-img');
-    const prevBtn = document.querySelector('.arrow-left');
-    const nextBtn = document.querySelector('.arrow-right');
     let currentSlide = 0;
-    let slideInterval;
 
     menuToggle.addEventListener('click', () => {
-      const isOpen = sidebar.classList.toggle('open');
+      const isOpen = menuToggle.classList.toggle('open');
+      sidebar.classList.toggle('open', isOpen);
       sidebar.setAttribute('aria-hidden', !isOpen);
-      menuToggle.classList.toggle('open');
     });
 
     logoContainer.addEventListener('click', () => {
-      window.location.href = '/website/';
+      document.querySelector('header').style.transition = 'opacity 0.3s ease';
+      document.querySelector('header').style.opacity = '0.6';
+      setTimeout(() => {
+        window.location.href = '/website/';
+      }, 300);
     });
 
     function updateCartCount(count) {
@@ -280,29 +283,17 @@
       });
     }
 
-    function autoSlide() {
-      slideInterval = setInterval(() => {
-        currentSlide = (currentSlide + 1) % slides.length;
-        showSlide(currentSlide);
-      }, 10000);
-    }
-
-    prevBtn.addEventListener('click', () => {
-      clearInterval(slideInterval);
-      currentSlide = (currentSlide - 1 + slides.length) % slides.length;
-      showSlide(currentSlide);
-      autoSlide();
-    });
-
-    nextBtn.addEventListener('click', () => {
-      clearInterval(slideInterval);
+    function nextSlide() {
       currentSlide = (currentSlide + 1) % slides.length;
       showSlide(currentSlide);
-      autoSlide();
-    });
+    }
 
-    // Start automatic slideshow
-    autoSlide();
+    function prevSlide() {
+      currentSlide = (currentSlide - 1 + slides.length) % slides.length;
+      showSlide(currentSlide);
+    }
+
+    setInterval(nextSlide, 10000); // 10 seconds
   </script>
 </body>
 </html>
