--- a/website/index.html
+++ b/website/index.html
@@ -4,9 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Matt Scianna</title>
-
   <link href="https://fonts.googleapis.com/css2?family=Cardo&display=swap" rel="stylesheet" />
-
   <style>
     * {
       margin: 0;
@@ -31,7 +29,7 @@
       top: 0;
       left: 0;
       width: 100vw;
-      height: 56px;
+      height: 64px;
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -39,91 +37,99 @@
       background-color: white;
       color: black;
       z-index: 1200;
-      box-sizing: border-box;
       border-bottom: 1px solid #ccc;
     }
 
-    /* Menu icon container */
-    #menuToggle {
-      width: 22px;
-      height: 16px;
-      margin-top: 4px; /* nudged 1px lower */
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      cursor: pointer;
-      position: relative;
-      transition: all 0.4s ease;
-      z-index: 1300;
-    }
-
-    /* Menu lines */
-    #menuToggle span {
-      display: block;
-      height: 2px;
-      background-color: black;
-      margin: 2px 0; /* lines closer vertically */
-      border-radius: 1px;
-      width: 22px; /* slightly longer horizontally */
-      transition: all 0.4s ease;
-    }
-
-    /* When open - transform lines into smooth X */
-    #menuToggle.open span:nth-child(1) {
-      transform: rotate(45deg);
-      position: absolute;
-      top: 7px;
-      left: 0;
-    }
-
-    #menuToggle.open span:nth-child(2) {
-      opacity: 0;
-    }
-
-    #menuToggle.open span:nth-child(3) {
-      transform: rotate(-45deg);
-      position: absolute;
-      top: 7px;
-      left: 0;
-    }
-
-    /* Logo container centered */
-    .logo-container {
-      position: absolute;
-      left: 50%;
-      transform: translateX(-50%);
-      top: 10px; /* adjusted for alignment */
-      cursor: pointer;
-      z-index: 1300;
-    }
-
-    /* Logo size */
-    .logo {
-      height: 34px; /* a bit smaller */
-    }
-
-    /* Shopping bag container on right aligned and vertically aligned with menu */
-    .cart-icon-container {
-      position: relative;
-      cursor: pointer;
-      z-index: 1300;
-      margin-top: 3px;
-      margin-right: 2px;
+    .menu-icon, .cart-icon-container {
       display: flex;
       align-items: center;
+      height: 22px; 
+      cursor: pointer;
+      z-index: 1300;
+      position: relative;
     }
 
-    /* Shopping bag size */
-    .cart-icon {
-      height: 24px; /* slightly bigger */
-      display: block;
+    /* Adjust menu icon downward for alignment */
+    .menu-icon {
+      width: 22px;
+      height: 16px;
+      margin-top: 4px; /* nudged down by 1 more pixel */
+      justify-content: center;
       position: relative;
+      transition: all 0.4s ease;
+    }
+
+    .menu-icon div {
+      position: absolute;
+      width: 22px;
+      height: 2px;
+      background-color: black;
+      left: 0;
+      border-radius: 2px;
+      transition: all 0.4s ease;
+    }
+
+    .menu-icon div:nth-child(1) {
       top: 0;
     }
 
-    /* Image box */
+    .menu-icon div:nth-child(2) {
+      top: 7px;
+    }
+
+    .menu-icon div:nth-child(3) {
+      top: 14px;
+    }
+
+    /* Simple smooth X transition: rotate top and bottom lines, hide middle line */
+    .menu-icon.open div:nth-child(1) {
+      transform: rotate(45deg);
+      top: 7px;
+    }
+
+    .menu-icon.open div:nth-child(2) {
+      opacity: 0;
+    }
+
+    .menu-icon.open div:nth-child(3) {
+      transform: rotate(-45deg);
+      top: 7px;
+    }
+
+    .logo-container {
+      position: absolute;
+      left: 50%;
+      top: 57%;
+      transform: translate(-50%, -50%);
+      z-index: 1300;
+    }
+
+    .logo {
+      height: 36px;
+    }
+
+    .cart-icon {
+      height: 22px;
+      display: block;
+    }
+
+    .cart-count {
+      position: absolute;
+      top: -6px;
+      right: -6px;
+      background-color: white;
+      color: #111;
+      border-radius: 50%;
+      font-size: 10px;
+      padding: 2px 5px;
+      line-height: 1;
+      min-width: 16px;
+      text-align: center;
+      display: none;
+    }
+
     .image-box {
-      margin-top: 56px;
+      margin-top: 64px;
       width: 100%;
       height: 400px;
       position: relative;
@@ -147,7 +153,29 @@
       z-index: 1;
     }
 
-    /* Sidebar styles */
+    .arrow {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      width: 24px;
+      height: 24px;
+      border: solid white;
+      border-width: 0 3px 3px 0;
+      padding: 6px;
+      cursor: pointer;
+      z-index: 2;
+    }
+
+    .arrow.left {
+      left: 10px;
+      transform: rotate(135deg);
+    }
+
+    .arrow.right {
+      right: 10px;
+      transform: rotate(-45deg);
+    }
+
     .sidebar {
       position: fixed;
       top: 0;
@@ -186,10 +214,10 @@
 <body>
 
   <header>
-    <div id="menuToggle" aria-label="Toggle sidebar" role="button" tabindex="0">
-      <span></span>
-      <span></span>
-      <span></span>
+    <div id="menuToggle" class="menu-icon" aria-label="Toggle sidebar" role="button" tabindex="0">
+      <div></div>
+      <div></div>
+      <div></div>
     </div>
 
     <div class="logo-container" id="logoContainer" title="Go to main page" role="button" tabindex="0">
@@ -198,12 +226,15 @@
 
     <div class="cart-icon-container" title="View Cart" role="button" tabindex="0">
       <img src="https://github.com/mattscianna/mattscianna/blob/main/SHOPPINGBAG.png?raw=true" alt="Cart" class="cart-icon" />
+      <div class="cart-count" id="cartCount">0</div>
     </div>
   </header>
 
   <div class="image-box" aria-label="Image slideshow">
-    <img class="slide-img active" src="https://via.placeholder.com/1200x700?text=Image+1" alt="Slide 1" />
-    <img class="slide-img" src="https://via.placeholder.com/1200x700?text=Image+2" alt="Slide 2" />
+    <img class="slide-img active" src="https://images.unsplash.com/photo-1603732551608-5fbc96b2c60d?auto=format&fit=crop&w=1200&q=80" alt="Football Turf 1" />
+    <img class="slide-img" src="https://images.unsplash.com/photo-1579982413367-39cdb401e9c4?auto=format&fit=crop&w=1200&q=80" alt="Football Turf 2" />
+    <div class="arrow left" onclick="prevSlide()"></div>
+    <div class="arrow right" onclick="nextSlide()"></div>
   </div>
 
   <nav id="sidebar" class="sidebar" aria-hidden="true" role="navigation" aria-label="Sidebar navigation">
@@ -214,10 +245,13 @@
     const menuToggle = document.getElementById('menuToggle');
     const sidebar = document.getElementById('sidebar');
     const logoContainer = document.getElementById('logoContainer');
+    const cartCountEl = document.getElementById('cartCount');
+    const slides = document.querySelectorAll('.slide-img');
+    let currentSlide = 0;
 
     menuToggle.addEventListener('click', () => {
-      const isOpen = sidebar.classList.toggle('open');
-      menuToggle.classList.toggle('open', isOpen);
+      const isOpen = menuToggle.classList.toggle('open');
+      sidebar.classList.toggle('open', isOpen);
       sidebar.setAttribute('aria-hidden', !isOpen);
     });
 
@@ -229,7 +263,13 @@
       }, 300);
     });
 
-    // Keyboard accessibility
+    function updateCartCount(count) {
+      cartCountEl.textContent = count;
+      cartCountEl.style.display = count > 0 ? 'inline-block' : 'none';
+    }
+
+    updateCartCount(0);
+
     ['menuToggle', 'logoContainer'].forEach(id => {
       const el = document.getElementById(id);
       el.addEventListener('keydown', (e) => {
@@ -239,15 +279,23 @@
       });
     });
 
-    // Image slideshow with 10s interval and smooth opacity transition
-    const slides = document.querySelectorAll('.slide-img');
-    let currentSlide = 0;
+    function showSlide(index) {
+      slides.forEach((slide, i) => {
+        slide.classList.toggle('active', i === index);
+      });
+    }
 
-    setInterval(() => {
-      slides[currentSlide].classList.remove('active');
+    function nextSlide() {
       currentSlide = (currentSlide + 1) % slides.length;
-      slides[currentSlide].classList.add('active');
-    }, 10000);
+      showSlide(currentSlide);
+    }
+
+    function prevSlide() {
+      currentSlide = (currentSlide - 1 + slides.length) % slides.length;
+      showSlide(currentSlide);
+    }
+
+    setInterval(nextSlide, 10000);
   </script>
 </body>
 </html>
