--- a/website/index.html
+++ b/website/index.html
@@ -10,6 +10,7 @@
       margin: 0;
       padding: 0;
       box-sizing: border-box;
+      -webkit-user-drag: none;
     }
 
     html, body {
@@ -24,16 +25,10 @@
       user-select: none;
     }
 
-    /* Make all images un-highlightable/unselectable */
     img {
-      -webkit-user-select: none; /* Safari */
-      -moz-user-select: none;    /* Firefox */
-      -ms-user-select: none;     /* IE10+/Edge */
-      user-select: none;         /* Standard */
-      -webkit-touch-callout: none; /* Disable callout on iOS */
-      -webkit-user-drag: none;   /* Disable image dragging in Safari and Chrome */
-      user-drag: none;           /* Standard */
-      pointer-events: none;      /* Prevent mouse/touch events on images */
+      pointer-events: none;
+      user-select: none;
+      -webkit-user-drag: none;
     }
 
     header {
@@ -61,51 +56,39 @@
       position: relative;
     }
 
-    /* Adjust menu icon downward for alignment */
     .menu-icon {
       width: 22px;
       height: 16px;
-      margin-top: 4px; /* nudged 1px lower as requested */
-      justify-content: center;
+      margin-top: 4px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
       position: relative;
+      cursor: pointer;
+      z-index: 1300;
       transition: all 0.4s ease;
     }
 
     .menu-icon div {
-      position: absolute;
-      width: 22px;
+      width: 100%;
       height: 2px;
       background-color: black;
-      left: 0;
       border-radius: 2px;
       transition: all 0.4s ease;
+      transform-origin: center;
     }
 
-    .menu-icon div:nth-child(1) {
-      top: 0;
-    }
-
-    .menu-icon div:nth-child(2) {
-      top: 7px;
-    }
-
-    .menu-icon div:nth-child(3) {
-      top: 14px;
-    }
-
-    /* Simple smooth X transition: rotate top and bottom lines, hide middle line */
     .menu-icon.open div:nth-child(1) {
-      transform: rotate(45deg);
-      top: 7px;
+      transform: rotate(45deg) translate(3px, 3px);
     }
 
     .menu-icon.open div:nth-child(2) {
       opacity: 0;
+      transform: scaleX(0);
     }
 
     .menu-icon.open div:nth-child(3) {
-      transform: rotate(-45deg);
-      top: 7px;
+      transform: rotate(-45deg) translate(3px, -3px);
     }
 
     .logo-container {
