--- a/website/index.html
+++ b/website/index.html
@@ -10,7 +10,10 @@
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      -webkit-user-drag: none;
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
     }
 
     html, body {
@@ -22,12 +25,10 @@
 
     body {
       color: black;
-      user-select: none;
     }
 
     img {
       pointer-events: none;
-      user-select: none;
       -webkit-user-drag: none;
     }
 
@@ -59,36 +60,31 @@
     .menu-icon {
       width: 22px;
       height: 16px;
-      margin-top: 4px;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      position: relative;
       cursor: pointer;
       z-index: 1300;
-      transition: all 0.4s ease;
+      margin-top: 4px; /* 1px lower for alignment */
     }
 
     .menu-icon div {
-      width: 100%;
       height: 2px;
       background-color: black;
-      border-radius: 2px;
-      transition: all 0.4s ease;
-      transform-origin: center;
+      border-radius: 1px;
+      transition: all 0.3s ease;
     }
 
     .menu-icon.open div:nth-child(1) {
-      transform: rotate(45deg) translate(3px, 3px);
+      transform: rotate(45deg) translateY(6px);
     }
 
     .menu-icon.open div:nth-child(2) {
       opacity: 0;
-      transform: scaleX(0);
     }
 
     .menu-icon.open div:nth-child(3) {
-      transform: rotate(-45deg) translate(3px, -3px);
+      transform: rotate(-45deg) translateY(-6px);
     }
 
     .logo-container {
