--- a/website/index.html
+++ b/website/index.html
@@ -10,9 +10,7 @@
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      -webkit-user-select: none;
-      -moz-user-select: none;
-      -ms-user-select: none;
+      -webkit-user-drag: none;
       user-select: none;
     }
 
@@ -21,15 +19,7 @@
       overflow-x: hidden;
       background-color: white;
       font-family: Arial, sans-serif;
-    }
-
-    body {
       color: black;
-    }
-
-    img {
-      pointer-events: none;
-      -webkit-user-drag: none;
     }
 
     header {
@@ -43,7 +33,6 @@
       align-items: center;
       padding: 12px 16px;
       background-color: white;
-      color: black;
       z-index: 1200;
       border-bottom: 1px solid #ccc;
     }
@@ -51,10 +40,8 @@
     .menu-icon, .cart-icon-container {
       display: flex;
       align-items: center;
-      height: 22px; 
       cursor: pointer;
       z-index: 1300;
-      position: relative;
     }
 
     .menu-icon {
@@ -63,9 +50,7 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      cursor: pointer;
-      z-index: 1300;
-      margin-top: 4px; /* 1px lower for alignment */
+      margin-top: 4px; /* aligned pixel tweak */
     }
 
     .menu-icon div {
@@ -97,11 +82,13 @@
 
     .logo {
       height: 36px;
+      -webkit-user-drag: none;
     }
 
     .cart-icon {
       height: 22px;
       display: block;
+      -webkit-user-drag: none;
     }
 
     .cart-count {
@@ -136,6 +123,8 @@
       opacity: 0;
       transition: opacity 1s ease-in-out;
       pointer-events: none;
+      -webkit-user-drag: none;
+      user-select: none;
     }
 
     .slide-img.active {
