--- a/website/index.html
+++ b/website/index.html
@@ -10,10 +10,6 @@
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      -webkit-user-select: none;
-      -moz-user-select: none;
-      -ms-user-select: none;
-      user-select: none;
     }
 
     html, body {
@@ -25,6 +21,7 @@
 
     body {
       color: black;
+      user-select: none;
     }
 
     header {
@@ -46,26 +43,30 @@
     .menu-icon, .cart-icon-container {
       display: flex;
       align-items: center;
+      height: 22px; 
       cursor: pointer;
       z-index: 1300;
+      position: relative;
     }
 
+    /* Adjust menu icon downward for alignment */
     .menu-icon {
       width: 22px;
       height: 16px;
-      margin-top: 4px;
+      margin-top: 4px; /* nudged down 1px from before */
       justify-content: center;
       position: relative;
+      transition: all 0.4s ease;
     }
 
     .menu-icon div {
       position: absolute;
-      width: 100%;
+      width: 22px;
       height: 2px;
       background-color: black;
       left: 0;
       border-radius: 2px;
-      transition: all 0.3s ease;
+      transition: all 0.4s ease;
     }
 
     .menu-icon div:nth-child(1) {
@@ -80,6 +81,7 @@
       top: 14px;
     }
 
+    /* Simple smooth X transition: rotate top and bottom lines, hide middle line */
     .menu-icon.open div:nth-child(1) {
       transform: rotate(45deg);
       top: 7px;
@@ -104,15 +106,13 @@
 
     .logo {
       height: 36px;
-      -webkit-user-drag: none;
-      pointer-events: none;
+      user-select: none;
     }
 
     .cart-icon {
       height: 22px;
       display: block;
-      -webkit-user-drag: none;
-      pointer-events: none;
+      user-select: none;
     }
 
     .cart-count {
@@ -128,6 +128,7 @@
       min-width: 16px;
       text-align: center;
       display: none;
+      user-select: none;
     }
 
     .image-box {
@@ -147,7 +148,7 @@
       opacity: 0;
       transition: opacity 1s ease-in-out;
       pointer-events: none;
-      -webkit-user-drag: none;
+      user-select: none;
     }
 
     .slide-img.active {
@@ -167,6 +168,7 @@
       padding: 6px;
       cursor: pointer;
       z-index: 2;
+      user-select: none;
     }
 
     .arrow.left {
@@ -179,16 +181,15 @@
       transform: rotate(-45deg);
     }
 
+    /* Updated sidebar with smooth transform & opacity animation */
     .sidebar {
       position: fixed;
       top: 0;
-      left: -100%;
+      left: 0; /* keep left zero, push offscreen with transform */
       width: 100vw;
       height: 100vh;
       background-color: white;
       font-family: 'Cardo', serif;
-      transition: left 0.5s ease-in-out;
-      z-index: 1100;
       color: black;
       font-size: 24px;
       user-select: none;
@@ -197,10 +198,16 @@
       flex-direction: column;
       align-items: flex-start;
       overflow-y: auto;
+
+      transform: translateX(-100%);
+      opacity: 0;
+      transition: transform 0.35s cubic-bezier(0.4, 0, 0.2, 1), opacity 0.35s ease-in-out;
+      z-index: 1100;
     }
 
     .sidebar.open {
-      left: 0;
+      transform: translateX(0);
+      opacity: 1;
     }
 
     main {
@@ -291,14 +298,3 @@
     function nextSlide() {
       currentSlide = (currentSlide + 1) % slides.length;
       showSlide(currentSlide);
-    }
-
-    function prevSlide() {
-      currentSlide = (currentSlide - 1 + slides.length) % slides.length;
-      showSlide(currentSlide);
-    }
-
-    setInterval(nextSlide, 10000);
-  </script>
-</body>
-</html>
