--- a/website/index.html
+++ b/website/index.html
@@ -24,6 +24,17 @@
       user-select: none;
     }
 
+    img {
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+      -webkit-touch-callout: none;
+      -webkit-user-drag: none;
+      user-drag: none;
+      pointer-events: none;
+    }
+
     header {
       position: fixed;
       top: 0;
@@ -53,7 +64,7 @@
     .menu-icon {
       width: 22px;
       height: 16px;
-      margin-top: 4px; /* nudged down 1px from before */
+      margin-top: 4px; /* nudged down 1px as before */
       justify-content: center;
       position: relative;
       transition: all 0.4s ease;
@@ -66,7 +77,7 @@
       background-color: black;
       left: 0;
       border-radius: 2px;
-      transition: all 0.4s ease;
+      transition: transform 0.4s ease, opacity 0.4s ease, top 0.4s ease;
     }
 
     .menu-icon div:nth-child(1) {
@@ -81,7 +92,7 @@
       top: 14px;
     }
 
-    /* Simple smooth X transition: rotate top and bottom lines, hide middle line */
+    /* Smooth X transition */
     .menu-icon.open div:nth-child(1) {
       transform: rotate(45deg);
       top: 7px;
@@ -107,12 +118,15 @@
     .logo {
       height: 36px;
       user-select: none;
+      -webkit-user-select: none;
+      pointer-events: none;
     }
 
     .cart-icon {
       height: 22px;
       display: block;
       user-select: none;
+      pointer-events: auto;
     }
 
     .cart-count {
@@ -128,7 +142,6 @@
       min-width: 16px;
       text-align: center;
       display: none;
-      user-select: none;
     }
 
     .image-box {
@@ -138,6 +151,7 @@
       position: relative;
       background-color: #222;
       overflow: hidden;
+      user-select: none;
     }
 
     .slide-img {
@@ -181,11 +195,10 @@
       transform: rotate(-45deg);
     }
 
-    /* Updated sidebar with smooth transform & opacity animation */
     .sidebar {
       position: fixed;
       top: 0;
-      left: 0; /* keep left zero, push offscreen with transform */
+      left: 0;
       width: 100vw;
       height: 100vh;
       background-color: white;
@@ -199,6 +212,7 @@
       align-items: flex-start;
       overflow-y: auto;
 
+      pointer-events: none;
       transform: translateX(-100%);
       opacity: 0;
       transition: transform 0.35s cubic-bezier(0.4, 0, 0.2, 1), opacity 0.35s ease-in-out;
@@ -208,6 +222,7 @@
     .sidebar.open {
       transform: translateX(0);
       opacity: 1;
+      pointer-events: auto;
     }
 
     main {
@@ -281,20 +296,4 @@
     updateCartCount(0);
 
     ['menuToggle', 'logoContainer'].forEach(id => {
-      const el = document.getElementById(id);
-      el.addEventListener('keydown', (e) => {
-        if (e.key === 'Enter') {
-          el.click();
-        }
-      });
-    });
-
-    function showSlide(index) {
-      slides.forEach((slide, i) => {
-        slide.classList.toggle('active', i === index);
-      });
-    }
-
-    function nextSlide() {
-      currentSlide = (currentSlide + 1) % slides.length;
-      showSlide(currentSlide);
+      const el = document.get
